# vm_cleanup

./: pyproject.toml
src/vm_cleanup/: inventory.py  main.py  utils.py
